01/errors.txt
1) error saying that the class should be declared in a file named hi
Hi.java:4: error: class hi is public, should be declared in a file named hi.java
public class hi{
       ^

2) Hello changes to hello

3) Hi.java:7: error: ')' expected
        System.out.println(Hello, world!");
                                       ^
Hi.java:7: error: unclosed string literal
        System.out.println(Hello, world!");
                                        ^
Hi.java:7: error: ';' expected
        System.out.println(Hello, world!");
                                           ^
Hi.java:10: error: reached end of file while parsing
}
 ^

4) Hi.java:7: error: unclosed string literal
        System.out.println("Hello, world!);
                           ^
Hi.java:7: error: ';' expected
        System.out.println("Hello, world!);
                                           ^
Hi.java:10: error: reached end of file while parsing
}
 ^
3 errors

5) Compiles but doesn't run
Error: Main method not found in class Hi, please define the main method as:
   public static void main(String[] args)
or a JavaFX application class must extend javafx.application.Application

6) Hi.java:7: error: cannot find symbol
        System.out.printline("Hello, world!");
                  ^
  symbol:   method printline(String)
  location: variable out of type PrintStream
1 error

7) Hi.java:7: error: ';' expected
        System.out.println("Hello, world!")
                                           ^
1 error

8) Doesn't compile
Hi.java:8: error: reached end of file while parsing
    }
     ^
1 error


